overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -441,3 +441,15 @@ input {
         font-size: 20px;
     }
 }
+
+@media (max-width: 500px) {
+    .titles {
+        width: 100%;
+    }
+}
+
+@media (max-width: 400px) {
+    .nav-bar a {
+        font-size: .8rem;
+    }
+}
